--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -7,7 +7,20 @@ body {
   line-height: 1.6;
   color: #333;
 }
+.typing-animation {
+  display: inline-block;
+  overflow: hidden;
+  animation: typing 1s steps(5, end) infinite;
+}
 
+@keyframes typing {
+  0% { width: 0 }
+  20% { width: 1ch }
+  40% { width: 2ch }
+  60% { width: 3ch }
+  80% { width: 2ch }
+  100% { width: 1ch }
+}
 .container {
   background-color: #28511D;
   height: 100%;
@@ -585,4 +598,6 @@ body {
   color: #28511D;
 
   }
+
+  
 }
