--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -3,6 +3,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 
 /* html,
 body {
