--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -4,6 +4,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+html {
+  scroll-behavior: smooth;
+}
 
 
 /* html,
